Fixed padding issue for images on mobile

--- a/css/jeremykerr.css
+++ b/css/jeremykerr.css
@@ -34,5 +34,6 @@ body {
 img {
     display: block;
     margin: 0 auto;
-    padding: 2em;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
